ghost-blog/ghost-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-deployment
  namespace: ghost
  labels:
    app: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - name: ghost
        image: ghost:latest
        ports:
        - containerPort: 2368
        volumeMounts:
          - name: ghost-mount
            mountPath: /var/lib/ghost/content
      volumes:
      - name: ghost-mount
        persistentVolumeClaim:
          claimName: ghost-pvc
