ghost-blog/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: ghost
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
          - name: mysql-mount
            mountPath: /var/lib/mysql
      volumes:
      - name: mysql-mount
        persistentVolumeClaim:
          claimName: mysql-pvc
