ghost-blog/ghost-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ghost-service
  namespace: ghost
  labels:
    app: ghost
spec:
  ports:
  - port: 2368
    targetPort: 2368
    protocol: TCP
  selector:
    app: ghost
