ghost-blog/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: ghost
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None
