ghost-blog/ghost-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-ingress
  namespace: ghost
spec:
  rules:
  - host: ghost-blog.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ghost-service
              port:
                number: 2368
